[package]
name = "memory_storage"
version = "0.9.0"
edition = "2021"
keywords = [
    "no-std",
    "storage",
    "memory",
    "map",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
memory_storage = {path = ".", features = ["alloc"]}

[dependencies]


[features]
alloc = []